--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Catamaran:400,500,600,700,700|Source+Sans+Pro:400,600");
-*{
+
+* {
   scroll-behavior: smooth;
 }
+
 body {
   line-height: 1.4;
   font-family: "Source Sans Pro", sans-serif;
@@ -15,7 +17,12 @@ p {
   font-size: 16px;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Catamaran", sans-serif;
   font-weight: 600;
 }
@@ -28,7 +35,8 @@ h1, h2, h3, h4, h5, h6 {
   display: inline-block;
 }
 
-ol, ul {
+ol,
+ul {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -46,12 +54,15 @@ iframe {
   border: 0;
 }
 
-a, a:focus, a:hover {
+a,
+a:focus,
+a:hover {
   text-decoration: none;
   outline: 0;
 }
 
-a:focus, a:hover {
+a:focus,
+a:hover {
   color: #28ABE3;
 }
 
@@ -145,7 +156,9 @@ a:focus, a:hover {
   z-index: 999999999;
 }
 
-.btn.active:focus, .btn:active:focus, .btn:focus {
+.btn.active:focus,
+.btn:active:focus,
+.btn:focus {
   outline: 0;
 }
 
@@ -208,13 +221,16 @@ a:focus, a:hover {
     transform: translateY(0);
     background: rgba(0, 0, 0, 0.1);
   }
+
   25% {
     height: 30px;
     -webkit-transform: translateY(15px);
     transform: translateY(15px);
     background: #28ABE3;
   }
-  50%, 100% {
+
+  50%,
+  100% {
     height: 5px;
     -webkit-transform: translateY(0);
     transform: translateY(0);
@@ -229,13 +245,16 @@ a:focus, a:hover {
     transform: translateY(0);
     background: #fff;
   }
+
   25% {
     height: 30px;
     -webkit-transform: translateY(15px);
     transform: translateY(15px);
     background: #3498db;
   }
-  50%, 100% {
+
+  50%,
+  100% {
     height: 5px;
     -webkit-transform: translateY(0);
     transform: translateY(0);
@@ -280,7 +299,8 @@ a:focus, a:hover {
   background: transparent;
 }
 
-.header-bradcrumb a, .header-bradcrumb .active {
+.header-bradcrumb a,
+.header-bradcrumb .active {
   color: #cfcfcf;
   font-weight: 200;
   font-family: "Source Sans Pro", sans-serif;
@@ -415,7 +435,7 @@ a:focus, a:hover {
   height: 100%;
 }
 
-.introduction::after{
+.introduction::after {
   position: absolute;
   top: 0;
   left: 0;
@@ -423,7 +443,7 @@ a:focus, a:hover {
   height: 100vh;
   min-height: 600px;
   content: '';
-  background-image: linear-gradient(90deg,rgba(11, 39, 65, 0.32),rgba(0, 0, 0, 0.5));
+  background-image: linear-gradient(90deg, rgba(11, 39, 65, 0.32), rgba(0, 0, 0, 0.5));
   object-fit: cover;
   /* z-index: 2; */
 }
@@ -443,7 +463,7 @@ a:focus, a:hover {
 }
 
 .navigation .logo-default,
-.navigation .logo-white{
+.navigation .logo-white {
   font-size: 1.5rem;
   font-weight: 700;
   letter-spacing: 1px;
@@ -489,7 +509,7 @@ a:focus, a:hover {
   visibility: visible;
   opacity: 1;
   -webkit-transform: scaleY(1);
-          transform: scaleY(1);
+  transform: scaleY(1);
 }
 
 .navigation .dropdown-menu {
@@ -502,9 +522,9 @@ a:focus, a:hover {
   transition: .3s ease;
   opacity: 0;
   -webkit-transform: scaleY(0);
-          transform: scaleY(0);
+  transform: scaleY(0);
   -webkit-transform-origin: top;
-          transform-origin: top;
+  transform-origin: top;
   background: #000;
 }
 
@@ -514,9 +534,9 @@ a:focus, a:hover {
     opacity: 1;
     visibility: visible;
     -webkit-transform: scaleY(1);
-            transform: scaleY(1);
+    transform: scaleY(1);
     -webkit-transform-origin: unset;
-            transform-origin: unset;
+    transform-origin: unset;
     text-align: center;
   }
 }
@@ -525,7 +545,7 @@ a:focus, a:hover {
   visibility: visible;
   opacity: 1;
   -webkit-transform: scaleY(1);
-          transform: scaleY(1);
+  transform: scaleY(1);
 }
 
 @media (max-width: 991px) {
@@ -551,15 +571,19 @@ a:focus, a:hover {
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.06);
     background: #fff;
   }
+
   .navigation .navbar-light .navbar-nav .nav-item .nav-link {
     color: #000;
   }
+
   .navigation .logo-white {
     display: none;
   }
+
   .navigation .logo-default {
     display: block;
   }
+
   .navigation .navbar-light .navbar-toggler {
     color: rgba(0, 0, 0, 0.5);
     border-color: rgba(0, 0, 0, 0.1);
@@ -699,7 +723,7 @@ a:focus, a:hover {
   right: 0;
   top: 50%;
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .slider-item h1 {
@@ -750,7 +774,7 @@ a:focus, a:hover {
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   z-index: 9;
   height: 70px;
   width: 70px;
@@ -771,7 +795,7 @@ a:focus, a:hover {
   background: transparent;
   top: 50%;
   -webkit-transform: translateY(-50%) rotate(-45deg);
-          transform: translateY(-50%) rotate(-45deg);
+  transform: translateY(-50%) rotate(-45deg);
   transition: .2s ease;
 }
 
@@ -782,7 +806,7 @@ a:focus, a:hover {
   width: 25px;
   top: 50%;
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   background: #fff;
   transition: .2s ease;
 }
@@ -882,7 +906,7 @@ a:focus, a:hover {
   padding: 100px 0;
   background: url("../assets/call-to-action/call-to-action-bg-2.jpg");
   background-size: cover;
-  background-attachment:fixed;
+  background-attachment: fixed;
   color: #fff;
 }
 
@@ -1030,7 +1054,8 @@ a:focus, a:hover {
   padding: 10px;
 }
 
-#error, #success {
+#error,
+#success {
   display: none;
   margin-bottom: 10px;
 }
@@ -1057,7 +1082,9 @@ a:focus, a:hover {
   color: #fff;
 }
 
-.services .service-block.color-bg i, .services .service-block.color-bg h3, .services .service-block.color-bg p {
+.services .service-block.color-bg i,
+.services .service-block.color-bg h3,
+.services .service-block.color-bg p {
   color: #fff;
 }
 
@@ -1085,9 +1112,10 @@ a:focus, a:hover {
 /*=================================================================
   Services section 2 Home Page
 ==================================================================*/
-.service-2{
-  background-color:#F7F7F7;
+.service-2 {
+  background-color: #F7F7F7;
 }
+
 .service-2 .service-item {
   border: 1px solid #eee;
   margin-bottom: 30px;
@@ -1102,8 +1130,8 @@ a:focus, a:hover {
 }
 
 .service-2 .service-item svg {
-  stroke: #2e5566!important;
-  fill: #28ABE3!important;
+  stroke: #2e5566 !important;
+  fill: #28ABE3 !important;
   height: 95px;
   width: 85px;
   line-height: 55px;
@@ -1178,7 +1206,8 @@ a:focus, a:hover {
   background-color: #28ABE3;
 }
 
-.development-steps .step-2 h4, .development-steps .step-2 p {
+.development-steps .step-2 h4,
+.development-steps .step-2 p {
   color: #fff;
 }
 
@@ -1186,7 +1215,8 @@ a:focus, a:hover {
   background: #198dbf;
 }
 
-.development-steps .step-3 h4, .development-steps .step-3 p {
+.development-steps .step-3 h4,
+.development-steps .step-3 p {
   color: #fff;
 }
 
@@ -1194,7 +1224,8 @@ a:focus, a:hover {
   background: #167da9;
 }
 
-.development-steps .step-4 h4, .development-steps .step-4 p {
+.development-steps .step-4 h4,
+.development-steps .step-4 p {
   color: #fff;
 }
 
@@ -1302,22 +1333,23 @@ a:focus, a:hover {
 /*=================================================================
   Footer section
 ==================================================================*/
-#footer{
-    background-color: rgba(0, 0, 0, 0.6); /*fallback */
-    /* FF 3.6+ */
-    background-image: -moz-linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url('../assets/footer-map.jpg');
-    /*Safari 5.1+, Chrome 10+*/
-    background-image: -webkit-linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url('../assets/footer-map.jpg');
-    /* Opera 11.10 */
-    background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url('../assets/footer-map.jpg');
-    /* Standard, IE10 */
-    background-image:  linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url('../assets/footer-map.jpg');
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    position: relative;
-    z-index: 1;
-  }
+#footer {
+  background-color: rgba(0, 0, 0, 0.6);
+  /*fallback */
+  /* FF 3.6+ */
+  background-image: -moz-linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url('../assets/footer-map.jpg');
+  /*Safari 5.1+, Chrome 10+*/
+  background-image: -webkit-linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url('../assets/footer-map.jpg');
+  /* Opera 11.10 */
+  background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url('../assets/footer-map.jpg');
+  /* Standard, IE10 */
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url('../assets/footer-map.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  z-index: 1;
+}
 
 .top-footer {
   border-top: 1px solid #404040;
@@ -1391,8 +1423,8 @@ a:focus, a:hover {
 
 @media(max-width:575.98px) {
   .scroll-arrow-btn {
-      margin-top: 38px;
-      margin-bottom: 40px
+    margin-top: 38px;
+    margin-bottom: 40px
   }
 }
 
@@ -1416,7 +1448,7 @@ svg {
 }
 
 .scroll-arrow-btn svg path,
-.scroll-arrow-btn{
+.scroll-arrow-btn {
   -webkit-transition: .5s cubic-bezier(.17, .85, .438, .99);
   -o-transition: .5s cubic-bezier(.17, .85, .438, .99);
   transition: .5s cubic-bezier(.17, .85, .438, .99)
@@ -1453,10 +1485,23 @@ svg {
 }
 
 @keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
-  40% {transform: translateY(-30px);} 
-  60% {transform: translateY(-15px);} 
-} 
+
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+
+  40% {
+    transform: translateY(-30px);
+  }
+
+  60% {
+    transform: translateY(-15px);
+  }
+}
 
 .scroll-arrow-btn:hover svg path {
   stroke: #fff
@@ -1505,89 +1550,97 @@ svg {
 
 @-webkit-keyframes LineWaves {
   0% {
-      -webkit-transform: scale(.8);
-      transform: scale(.8);
-      opacity: 0
+    -webkit-transform: scale(.8);
+    transform: scale(.8);
+    opacity: 0
   }
 
   30% {
-      -webkit-transform: scale(.9);
-      transform: scale(.9);
-      opacity: 1
+    -webkit-transform: scale(.9);
+    transform: scale(.9);
+    opacity: 1
   }
 
   70% {
-      -webkit-transform: scale(1.1);
-      transform: scale(1.1)
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1)
   }
 
   100% {
-      -webkit-transform: scale(1.2);
-      transform: scale(1.2);
-      opacity: 0
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+    opacity: 0
   }
 }
 
 @keyframes LineWaves {
   0% {
-      -webkit-transform: scale(.8);
-      transform: scale(.8);
-      opacity: 0
+    -webkit-transform: scale(.8);
+    transform: scale(.8);
+    opacity: 0
   }
 
   30% {
-      -webkit-transform: scale(.9);
-      transform: scale(.9);
-      opacity: 1
+    -webkit-transform: scale(.9);
+    transform: scale(.9);
+    opacity: 1
   }
 
   70% {
-      -webkit-transform: scale(1.1);
-      transform: scale(1.1)
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1)
   }
 
   100% {
-      -webkit-transform: scale(1.2);
-      transform: scale(1.2);
-      opacity: 0
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+    opacity: 0
   }
 }
 
-#footer .social .icons{
+#footer .social .icons {
   font-size: 22px;
   margin: 1px 4px;
   transition: transform 0.3s ease-in-out;
 }
 
-#footer .social .icons:hover{
+#footer .social .icons:hover {
   transform: scale(1.2);
 }
 
 @media (min-width: 980px) and (max-width: 1150px) {
+
   /* home slider */
   #slitSlider .carousel-caption h2 {
     font-size: 60px;
   }
+
   /* about us */
   .feature-desc h3 {
     margin-top: 0;
   }
+
   /* our team */
   .team-mate {
     margin-bottom: 30px;
   }
+
   .mask ul {
     top: 85px;
   }
+
   .mask ul li {
     margin: 0 5px;
   }
-  .team-mate > h4 {
+
+  .team-mate>h4 {
     margin-bottom: 10px;
   }
+
   .team-mate img {
     margin: 0 auto;
   }
+
   .member-info ul li {
     margin-right: 10px;
   }
@@ -1600,18 +1653,22 @@ svg {
   .counters-item:before {
     display: none;
   }
+
   /* navigation */
   .navbar-inverse .navbar-nav li a {
     padding: 20px 10px;
   }
+
   /* about us */
   .wrap-about {
     margin: 0 0 75px;
   }
+
   .about-content {
     margin: 0 auto;
     width: 60%;
   }
+
   /* our team */
   .team-mate {
     margin: 0 auto 30px;
@@ -1626,38 +1683,47 @@ svg {
   .counters-item:before {
     display: none;
   }
+
   .clients-logo-slider {
     text-align: center;
   }
+
   /* h1 font size home slider */
   h1 {
     font-size: 30px;
   }
+
   .carousel-caption img {
     width: 70%;
   }
+
   #slitSlider .carousel-caption h2 {
     font-size: 24px;
     letter-spacing: 0.5px;
     line-height: 35px;
     margin-bottom: 25px;
   }
+
   #slitSlider .carousel-caption h3 {
     font-size: 20px;
     letter-spacing: 0.5px;
     line-height: 28px;
     margin-bottom: 25px;
   }
+
   #slitSlider .carousel-caption a {
     font-size: 14px;
   }
+
   .wrap-about {
     margin: 0 auto 80px;
     width: 85%;
   }
+
   .feature-desc a {
     margin: 5px 5px 5px 0;
   }
+
   /* services */
   #services .title {
     padding-bottom: 60px;
@@ -1668,28 +1734,36 @@ svg {
     margin: 0 auto 31px;
     width: 280px;
   }
+
   .team-mate img {
     margin: 0 auto;
   }
+
   .member-info ul {
     text-align: center;
     margin-bottom: 10px;
   }
+
   /* contact */
   .contact-info {
     margin: 0 0 30px;
   }
+
   #map-canvas {
     height: 250px;
   }
+
   /* footer */
-  .social-icon ul li, .social-icon ul li:first-child {
+  .social-icon ul li,
+  .social-icon ul li:first-child {
     margin: 15px;
   }
+
   .social-icon ul li a {
     width: 50px;
     height: 50px;
   }
+
   .social-icon ul li a i {
     font-size: 24px;
     line-height: 50px;
@@ -1704,27 +1778,33 @@ svg {
   .title h2 {
     font-size: 32px;
   }
+
   .counter .counter-title h2 {
     font-size: 35px;
   }
+
   /* about us */
   .wrap-about {
     margin: 0 auto 75px;
     width: 70%;
   }
+
   /* our team */
   .team-mate {
     margin: 0 auto 30px;
     width: 280px;
   }
+
   .team-mate img {
     margin: 0 auto;
   }
+
   /* skills */
   .skill-chart {
     margin: 0 auto 40px;
     width: 300px;
   }
+
   /* contact */
   .contact-info {
     width: 100%;
