--- a/css/style.css
+++ b/css/style.css
@@ -104,8 +104,6 @@ a:hover { color: #28ABE3; }
 .mt-40 { margin-top: 40px; }
 .mt-50 { margin-top: 50px; }
 
-#home { position: relative; }
-
 .section { padding: 100px 0; }
 
 .section-sm { padding: 70px 0; }
@@ -271,97 +269,6 @@ a:hover { color: #28ABE3; }
   color: #28ABE3;
 }
 
-.colors-switcher {
-  width: 100px;
-  padding: 20px 18px 14px 20px;
-  position: fixed;
-  z-index: 1993;
-  top: 90px;
-  right: 0;
-  background-color: #fff;
-  border-radius: 2px 0 0 2px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  transition: all .4s ease-in-out;
-}
-
-.colors-switcher #show-panel {
-  position: absolute;
-  left: -38px;
-  top: 15px;
-  width: 38px;
-  height: 38px;
-  z-index: 1992;
-  display: block;
-  background-color: #fff;
-  border-radius: 2px 0 0 2px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-right: none;
-  cursor: pointer;
-}
-
-.colors-switcher #show-panel i {
-  color: #3D3D3D;
-  font-size: 1.25em;
-  line-height: 38px;
-  margin-left: 10px;
-}
-
-.colors-list {
-  margin: 0;
-  padding: 0;
-}
-
-.colors-list li {
-  display: inline-block;
-  margin-bottom: 2px;
-  margin-right: 4px;
-}
-
-.colors-list li a {
-  text-align: center;
-  display: inline-block;
-  width: 24px;
-  height: 24px;
-  border-radius: 2px;
-  transition: all 0.2s linear;
-  -moz-transition: all 0.2s linear;
-  -webkit-transition: all 0.2s linear;
-  -o-transition: all 0.2s linear;
-  cursor: pointer;
-}
-
-.colors-switcher .colors-list a.light-red {
-  background-color: #FF432E;
-}
-
-.colors-switcher .colors-list li a:hover {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.4);
-}
-
-.colors-switcher .colors-list a.light-red {
-  background-color: #FF432E;
-}
-
-.colors-switcher .colors-list a.blue {
-  background-color: #28ABE3;
-}
-
-.colors-switcher .colors-list a.light-blue {
-  background-color: #69D2E7;
-}
-
-.colors-switcher .colors-list a.green {
-  background-color: #5BB12F;
-}
-
-.colors-switcher .colors-list a.light-green {
-  background-color: #BCCF02;
-}
-
-.colors-switcher .colors-list a.yellow {
-  background-color: #FED136;
-}
-
 .logo {
   margin-top: 10px;
   display: inline-block;
@@ -421,13 +328,10 @@ a:hover { color: #28ABE3; }
 
 .navigation .navbar-nav .nav-item .nav-link:hover,
 .navigation .navbar-nav .nav-item .nav-link:active,
+.navigation .navbar-nav .nav-item.active .nav-link,
 .navigation .nav-item .nav-link:focus {
   background: none;
-  color: #28ABE3;
-}
-
-.navigation .nav-item.active .nav-link {
-  color: #28ABE3;
+  color: #28ABE3!important;
 }
 
 .sticky-header {
@@ -696,39 +600,178 @@ a:hover { color: #28ABE3; }
 }
 
 /*=================================================================
-  About us section
+                 About Page
 ==================================================================*/
-.about {
+/*==============================
+           Our Team
+  ==============================*/
+.team {
   padding: 100px 0;
+  background: #F6F6F6;
+}
+
+.team .team-member {
   background: #fff;
 }
 
-.about .btn-about {
-  background: #28ABE3;
+.team .team-member .member-content {
+  padding: 25px 0;
 }
 
-.about h4 {
-  margin-top: 30px;
+.team .team-member .member-content h3 {
+  font-size: 20px;
+  margin: 0 0 5px;
+  color: #333;
 }
 
-.about .feature-list {
+.team .team-member .member-content span {
+  font-size: 14px;
+  color: #555;
+}
+
+.team .team-member .member-content p {
+  color: #777;
   margin-top: 10px;
+  padding: 0 15px;
 }
 
-.about .feature-list li {
-  width: 48%;
+.team .member-photo {
+  overflow: hidden;
+  position: relative;
+}
+
+.team .member-photo:hover img {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.team .member-photo img {
+  transition: all 0.6s ease 0s;
+}
+
+.team .member-photo .mask {
+  background: rgba(40, 171, 227, 0.7);
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  top: auto;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  left: 0;
+  right: 0;
+  cursor: pointer;
+  padding: 0;
+  height: 80px;
+  -webkit-transform: translateY(100%);
+  transform: translateY(100%);
+  transition: all .3s ease;
+}
+
+.team .member-photo .mask ul {
+  text-align: center;
+  position: relative;
+  margin-top: 22px;
+}
+
+.team .member-photo .mask ul li {
   display: inline-block;
-  color: #666;
-  font-size: 0.81em;
-  font-family: "Catamaran", sans-serif;
-  margin-bottom: 5px;
-  font-weight: 600;
+  margin-right: 7px;
 }
 
-.about .feature-list li i {
-  color: #28ABE3;
-  margin-right: 8px;
+.team .member-photo .mask ul li a {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  color: #fff;
+  display: block;
+  font-size: 20px;
+  height: 35px;
+  line-height: 35px;
+  text-align: center;
+  width: 35px;
 }
+
+.team .member-photo .mask ul li a::hover {
+  background-color: #6cb670;
+  border: 1px solid transparent;
+}
+
+.team .member-photo:hover .mask {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -webkit-transform: translateY(0%);
+  transform: translateY(0%);
+}
+
+/*=================================================================
+                 Services Page
+==================================================================*/
+/*========================
+    Services section
+==========================*/
+.services {
+  padding: 100px 0 130px;
+}
+
+.services .service-block.color-bg {
+  background: #28ABE3;
+  color: #fff;
+}
+
+.services .service-block.color-bg i,
+.services .service-block.color-bg h3,
+.services .service-block.color-bg p {
+  color: #fff;
+}
+
+.services .service-block .service-icon {
+  margin-bottom: 30px;
+}
+
+.services .service-block i {
+  font-size: 4.7em;
+  color: #28ABE3;
+}
+
+.services .service-block h3 {
+  color: #333;
+  font-size: 1.125em;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.services .service-block p {
+  font-size: 0.875em;
+  color: #666;
+}
+
+/*=======================
+     Our skills
+=========================*/
+.team-skills .progress-block {
+  margin-top: 40px;
+}
+
+.team-skills .progress-block span {
+  display: inline-block;
+  margin-bottom: 5px;
+  font-size: 14px;
+}
+
+.team-skills .progress-block .progress {
+  box-shadow: none;
+  border-radius: 0;
+  height: 10px;
+}
+
+.team-skills .progress-block .progress .progress-bar {
+  background: #28ABE3;
+  box-shadow: none;
+}
+
+.clients-logo-slider {
+  margin-top: 50px;
+}
+
 
 /*=================================================================
   Contact
@@ -849,239 +892,6 @@ a:hover { color: #28ABE3; }
   height: 400px;
   color: white;
 }
-
-
-/*=================================================================
-  Services section
-==================================================================*/
-.services {
-  padding: 100px 0 130px;
-}
-
-.services .service-block.color-bg {
-  background: #28ABE3;
-  color: #fff;
-}
-
-.services .service-block.color-bg i,
-.services .service-block.color-bg h3,
-.services .service-block.color-bg p {
-  color: #fff;
-}
-
-.services .service-block .service-icon {
-  margin-bottom: 30px;
-}
-
-.services .service-block i {
-  font-size: 4.7em;
-  color: #28ABE3;
-}
-
-.services .service-block h3 {
-  color: #333;
-  font-size: 1.125em;
-  text-transform: uppercase;
-  font-weight: bold;
-}
-
-.services .service-block p {
-  font-size: 0.875em;
-  color: #666;
-}
-
-
-/*=================================================================
-  Our skills
-==================================================================*/
-.team-skills .progress-block {
-  margin-top: 40px;
-}
-
-.team-skills .progress-block span {
-  display: inline-block;
-  margin-bottom: 5px;
-  font-size: 14px;
-}
-
-.team-skills .progress-block .progress {
-  box-shadow: none;
-  border-radius: 0;
-  height: 10px;
-}
-
-.team-skills .progress-block .progress .progress-bar {
-  background: #28ABE3;
-  box-shadow: none;
-}
-
-.clients-logo-slider {
-  margin-top: 50px;
-}
-
-/*=================================================================
-  Step section
-==================================================================*/
-.development-steps .step {
-  padding: 80px 20px;
-}
-
-.development-steps .step h4 {
-  font-size: 20px;
-  font-weight: 600;
-}
-
-.development-steps .step h4 i {
-  font-size: 72px;
-  font-weight: 500;
-  margin-right: 10px;
-}
-
-.development-steps .step p {
-  color: #cccccc;
-  font-size: 14px;
-  line-height: 22px;
-}
-
-.development-steps .step-1 {
-  background-color: #f2f6f8;
-}
-
-.development-steps .step-1 h4 {
-  color: #212121;
-}
-
-.development-steps .step-1 p {
-  color: #838383;
-}
-
-.development-steps .step-2 {
-  background-color: #28ABE3;
-}
-
-.development-steps .step-2 h4,
-.development-steps .step-2 p {
-  color: #fff;
-}
-
-.development-steps .step-3 {
-  background: #198dbf;
-}
-
-.development-steps .step-3 h4,
-.development-steps .step-3 p {
-  color: #fff;
-}
-
-.development-steps .step-4 {
-  background: #167da9;
-}
-
-.development-steps .step-4 h4,
-.development-steps .step-4 p {
-  color: #fff;
-}
-
-/*=================================================================
-  Our Team
-  ==================================================================*/
-.team {
-  padding: 100px 0;
-  background: #F6F6F6;
-}
-
-.team .team-member {
-  background: #fff;
-}
-
-.team .team-member .member-content {
-  padding: 25px 0;
-}
-
-.team .team-member .member-content h3 {
-  font-size: 20px;
-  margin: 0 0 5px;
-  color: #333;
-}
-
-.team .team-member .member-content span {
-  font-size: 14px;
-  color: #555;
-}
-
-.team .team-member .member-content p {
-  color: #777;
-  margin-top: 10px;
-  padding: 0 15px;
-}
-
-.team .member-photo {
-  overflow: hidden;
-  position: relative;
-}
-
-.team .member-photo:hover img {
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
-}
-
-.team .member-photo img {
-  transition: all 0.6s ease 0s;
-}
-
-.team .member-photo .mask {
-  background: rgba(40, 171, 227, 0.7);
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  top: auto;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  left: 0;
-  right: 0;
-  cursor: pointer;
-  padding: 0;
-  height: 80px;
-  -webkit-transform: translateY(100%);
-  transform: translateY(100%);
-  transition: all .3s ease;
-}
-
-.team .member-photo .mask ul {
-  text-align: center;
-  position: relative;
-  margin-top: 22px;
-}
-
-.team .member-photo .mask ul li {
-  display: inline-block;
-  margin-right: 7px;
-}
-
-.team .member-photo .mask ul li a {
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  color: #fff;
-  display: block;
-  font-size: 20px;
-  height: 35px;
-  line-height: 35px;
-  text-align: center;
-  width: 35px;
-}
-
-.team .member-photo .mask ul li a::hover {
-  background-color: #6cb670;
-  border: 1px solid transparent;
-}
-
-.team .member-photo:hover .mask {
-  opacity: 1;
-  filter: alpha(opacity=100);
-  -webkit-transform: translateY(0%);
-  transform: translateY(0%);
-}
-
 
 /*=================================================================
   Footer section
@@ -1339,12 +1149,6 @@ svg {
 }
 
 @media (min-width: 980px) and (max-width: 1150px) {
-
-  /* about us */
-  .feature-desc h3 {
-    margin-top: 0;
-  }
-
   /* our team */
   .team-mate {
     margin-bottom: 30px;
@@ -1399,10 +1203,6 @@ svg {
     width: 180px;
   }
 
-  .counters-item:before {
-    display: none;
-  }
-
   body{
     font-size: 14px!important;
   }
@@ -1430,9 +1230,6 @@ svg {
   }
 
   /* about us */
-  .wrap-about {
-    margin: 0 0 75px;
-  }
 
   .about-content {
     margin: 0 auto;
@@ -1456,10 +1253,6 @@ svg {
 
   .navbar .line {
     width: 26px;
-  }
-
-  .counters-item:before {
-    display: none;
   }
 
   /* h1 font size home slider */
@@ -1493,15 +1286,6 @@ svg {
   .carousel-item .carousel-caption a{ 
     font-size: 2.7vw!important;
     padding: 1vw 1.2vw;
-  }
-
-  .wrap-about {
-    margin: 0 auto 80px;
-    width: 85%;
-  }
-
-  .feature-desc a {
-    margin: 5px 5px 5px 0;
   }
 
   /* services */
@@ -1550,16 +1334,6 @@ svg {
     font-size: 32px;
   }
 
-  .counter .counter-title h2 {
-    font-size: 35px;
-  }
-
-  /* about us */
-  .wrap-about {
-    margin: 0 auto 75px;
-    width: 70%;
-  }
-
   /* our team */
   .team-mate {
     margin: 0 auto 30px;
@@ -1568,12 +1342,6 @@ svg {
 
   .team-mate img {
     margin: 0 auto;
-  }
-
-  /* skills */
-  .skill-chart {
-    margin: 0 auto 40px;
-    width: 300px;
   }
 
   /* contact */
