--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,14 @@
 
 body {
   line-height: 1.4;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   scroll-behavior: smooth;
   font-size: 16px;
 }
 
 p {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #848484;
 }
 
@@ -28,7 +28,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Catamaran", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 600;
 }
 
@@ -237,7 +237,7 @@ a:hover { color: #28ABE3; }
 .title h2 {
   font-weight: 600;
   font-size: 2.2em;
-  color: #232323;
+  color: #3e4555;
 }
 
 .title p {
@@ -672,96 +672,101 @@ a:hover { color: #28ABE3; }
   background: #F6F6F6;
 }
 
-.team .team-member {
-  background: #fff;
+.team .members {
+  font-family: "Montserrat", sans-serif;
+  color: #8d97ad;
+  font-weight: 300;
 }
 
-.team .team-member .member-content {
-  padding: 25px 0;
+.team .members h2,
+.team .members h6 {
+  color: #3e4555;
 }
 
-.team .team-member .member-content h3 {
-  font-size: 20px;
-  margin: 0 0 5px;
-  color: #333;
+.team .members .bg-light {
+  background-color: #f4f8fa !important;
 }
 
-.team .team-member .member-content span {
-  font-size: 14px;
-  color: #555;
+.team .members .subtitle {
+  color: #8d97ad;
+  line-height: 24px;
 }
 
-.team .team-member .member-content p {
-  color: #777;
-  margin-top: 10px;
-  padding: 0 15px;
+.team .members .pro-pic {
+  min-height: 200px;
 }
 
-.team .member-photo {
-  overflow: hidden;
-  position: relative;
-}
-
-.team .member-photo:hover img {
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
-}
-
-.team .member-photo img {
-  transition: all 0.6s ease 0s;
-}
-
-.team .member-photo .mask {
-  background: rgba(40, 171, 227, 0.7);
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  top: auto;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  left: 0;
-  right: 0;
-  cursor: pointer;
+.team ul.social-network {
+  list-style: none;
+  display: inline;
+  margin-left: 0 !important;
   padding: 0;
-  height: 80px;
-  -webkit-transform: translateY(100%);
-  transform: translateY(100%);
-  transition: all .3s ease;
 }
 
-.team .member-photo .mask ul {
-  text-align: center;
-  position: relative;
-  margin-top: 22px;
+.team ul.social-network li {
+  display: inline;
+  margin: 0 5px;
 }
 
-.team .member-photo .mask ul li {
-  display: inline-block;
-  margin-right: 7px;
-}
+.social-network a.icoFacebook:hover { background-color: #3B5998; }
+.social-network a.icoTwitter:hover { background-color: #33ccff; }
+.social-network a.icoJoomla:hover { background-color: #BD3518; }
+.social-network a.icoVimeo:hover { background-color: #0590B8; }
+.social-network a.icoLinkedin:hover { background-color: #007bb7; }
 
-.team .member-photo .mask ul li a {
-  border: 1px solid #ddd;
-  border-radius: 4px;
+.social-network a.icoRss:hover i,
+.social-network a.icoFacebook:hover i,
+.social-network a.icoTwitter:hover i,
+.social-network a.icoGoogle:hover i,
+.social-network a.icoVimeo:hover i,
+.social-network a.icoLinkedin:hover i {
   color: #fff;
-  display: block;
-  font-size: 20px;
-  height: 35px;
-  line-height: 35px;
+}
+
+.social-circle li a {
+  display: inline-block;
+  position: relative;
+  margin: 0 auto 0 auto;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
   text-align: center;
-  width: 35px;
+  width: 30px;
+  height: 30px;
+  font-size: 20px;
 }
 
-.team .member-photo .mask ul li a::hover {
-  background-color: #6cb670;
-  border: 1px solid transparent;
+.social-circle li svg {
+  margin: 0;
+  line-height: 30px;
+  text-align: center;
 }
 
-.team .member-photo:hover .mask {
-  opacity: 1;
-  filter: alpha(opacity=100);
-  -webkit-transform: translateY(0%);
-  transform: translateY(0%);
+.social-circle li a:hover svg{
+  -moz-transform: rotate(360deg);
+  -webkit-transform: rotate(360deg);
+  -ms--transform: rotate(360deg);
+  transform: rotate(360deg);
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.social-circle svg {
+  fill: #fff;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: all 0.8s;
+  -moz-transition: all 0.8s;
+  -o-transition: all 0.8s;
+  -ms-transition: all 0.8s;
+  transition: all 0.8s;
+}
+
+.team a {
+  background-color: #D3D3D3;
 }
 
 /*=================================================================
